Added Getpost, getallpost, updatepost, deletepost methods
Added postId field in postdto class